Don't put out-of-flow boxes in anonymous flex/grid items https://bugs.webkit.org/show_bug.cgi?id=205386

Reviewed by Manuel Rego Casasnovas.

Source/WebCore:

A single anonymous flex/grid item should just contain a contiguous
sequence of text runs.

This patch is based on https://crrev.com/533825 from Chromium.

Tests: imported/w3c/web-platform-tests/css/css-flexbox/anonymous-flex-item-004.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/anonymous-grid-item-001.html

* rendering/updating/RenderTreeBuilderBlock.cpp:
(WebCore::RenderTreeBuilder::Block::attachIgnoringContinuation):

LayoutTests:

Expect tests to pass.

* TestExpectations:


Canonical link: https://commits.webkit.org/225129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262061 268f45cc-cd09-0410-ab3c-d52691b4dbfc